gateways/NGF/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata: # metadata regarding Gateway
  name: gateway-nginx
  namespace: gateway-nginx

spec:
  gatewayClassName: nginx
  listeners:
    - name: http-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All  # Allow routes from any namespace

    # HTTPS Listener (Port 443) - uncomment when you have a TLS certificate
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: example-tls-secret
